--- a/a2_part2_aarjavja_suhachow_Latest.ipynb
+++ b/a2_part2_aarjavja_suhachow_Latest.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Aarjavjain22/Neural-Network---ML-Lab/blob/main/a2_part2_aarjavja_suhachow_Latest.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -26,7 +37,7 @@
         "id": "gkzS0WR2moUo",
         "outputId": "7d46716d-e471-4931-dc85-a3d305231c14"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -39,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "G2JTET-5haii"
       },
@@ -70,7 +81,7 @@
       "metadata": {
         "id": "ZE9lbiPfhtC3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +97,7 @@
         "id": "NJY789hBiDGg",
         "outputId": "cc50f9b1-611b-4c37-8614-4383540776c2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +566,7 @@
         "id": "bitYkenRiITu",
         "outputId": "f19f9a6b-8877-43f9-b831-ffea44e6ee69"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,7 +907,7 @@
         "id": "Z3EMvyxFipW7",
         "outputId": "55efd814-4aed-43a8-e185-d33b3453e410"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2147,7 +2158,7 @@
       "metadata": {
         "id": "vUWjSjuMA7ju"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2163,7 +2174,7 @@
         "id": "ceftuCLsBGKK",
         "outputId": "d0c67ff2-396e-4619-9b28-5fada43526d2"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2632,7 +2643,7 @@
         "id": "K--gllZkB_16",
         "outputId": "7533ba0f-e421-499b-f1ac-5a3c38a4b762"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3891,7 +3902,7 @@
         "id": "H92if08PDEpP",
         "outputId": "0902fa74-06fe-41ea-c169-801ff54fdebf"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3923,7 +3934,7 @@
         "id": "VeKmWmCtD1BH",
         "outputId": "e47b0b50-bb98-4c4f-f444-0f232d7f18f5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4402,7 +4413,7 @@
         "id": "VBHbM9g-GM8N",
         "outputId": "ac35b848-437e-4e10-ef49-965409d8e569"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4439,7 +4450,7 @@
         "id": "dYiRCYvXGXOR",
         "outputId": "49c6a64f-a685-412b-807c-3420fecc16a5"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4470,7 +4481,7 @@
         "id": "9KU5y6xmG7Lz",
         "outputId": "77c84399-9069-45cb-d7cb-a95763bb4cd0"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4496,7 +4507,7 @@
         "id": "xKLCVl-TH5MO",
         "outputId": "c1cef8a9-e376-4784-e582-621ece94b0cc"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4551,7 +4562,7 @@
         "id": "u-Z9PVOmKINt",
         "outputId": "a52024af-676b-4cfc-a67d-697af3a447d9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4592,7 +4603,7 @@
       "metadata": {
         "id": "Us1W_M3vMU1m"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4636,7 +4647,7 @@
       "metadata": {
         "id": "jE4jypo9OdPD"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4645,7 +4656,7 @@
       "metadata": {
         "id": "FcQz80MzTCQ-"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4667,7 +4678,7 @@
         "id": "FYthVhIsQkrX",
         "outputId": "f875dc5b-016b-4dcf-a661-b1b8b200dfdb"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4721,7 +4732,7 @@
         "id": "hq2qEKBeEVvf",
         "outputId": "04986a52-e36f-49b5-af99-6f78c45eb528"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4762,7 +4773,7 @@
         },
         "outputId": "0ab67a23-0bb7-4e5d-b8bb-d44f11fd632b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4782,7 +4793,7 @@
       "metadata": {
         "id": "0BtvFFHZZCf1"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4807,7 +4818,7 @@
         },
         "outputId": "1a0ccbcf-2ab4-4f63-92ab-d0c721cac53a"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4851,7 +4862,7 @@
         "id": "FCs9sNoQI-LC",
         "outputId": "8d239701-c064-4b71-d7ec-4b7eb41d94ac"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5041,7 +5052,7 @@
         },
         "outputId": "3b5a5c6c-78ad-4005-c94c-eaab26d2cbf4"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5117,7 +5128,7 @@
         "id": "okS8o3UfR0Og",
         "outputId": "75b190c3-6dec-43a8-debc-5426fbdec8a2"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5155,7 +5166,7 @@
         "id": "hAkHssEgcALk",
         "outputId": "043b26a5-c84f-4342-9a41-47468a404372"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5196,7 +5207,7 @@
         "id": "9hlfc3-CfIvM",
         "outputId": "35b6b79a-00bb-4082-aea0-8475719c5d81"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5218,7 +5229,7 @@
       "metadata": {
         "id": "6rUluOy-fa4s"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5274,7 +5285,7 @@
         "id": "Sh6yTBLBfrBe",
         "outputId": "1ea96855-531d-4c96-ae3f-24e3b847b51c"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5334,7 +5345,7 @@
         "id": "voSEkJS9hxNN",
         "outputId": "e3bc04af-a380-4f53-cb15-833f69a77eca"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5391,7 +5402,7 @@
         "id": "iSr9bADoh5mp",
         "outputId": "fc15d86b-819b-4231-96a9-f51a09699269"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
